Fix elements floating out of container

--- a/index.css
+++ b/index.css
@@ -31,7 +31,7 @@ body {
 }
 
 .card__top {
-  flex: 2 0 66%;
+  flex: 2 0 0px;
   object-fit: contain;
 }
 
@@ -49,7 +49,7 @@ body {
   align-items: center;
   text-align: center;
   font-family: "Outfit";
-  flex: 1 1 100%;
+  flex: 1 1 0px;
 }
 
 .card__heading, .card__text {
